page 2 img alignment and color fixed

--- a/style.css
+++ b/style.css
@@ -49,13 +49,17 @@
     font-family: Arial, Helvetica, sans-serif;
     margin: 110px 0 -10px;
 }
+.pg2-des2{
+    margin-bottom: 60px;
+}
 .feature-container{
+    height: 610px;
+    width: 1440px;
     display: flex;
-    justify-content: space-around;
-    align-items: center;
+    justify-content: center;
+    margin: auto;
     gap: 10px;
-    /* height: 610px; */
-    /* width: 1410px; */
+    
 }
 
 .feature-flower{
@@ -66,14 +70,42 @@
     height: 538px;
     
 }
+.img-bg{
+    height: 538px;
+    width: 464px;
+    background-color: pink;
+    border: none;
+    border-radius: 300px 300px 0 0;
+}
 .feature-img-title{
-    text-align: center;
+    display: flex;
+    justify-content: space-around;
     font-size: 20px;
     font-weight: bold;
     font-family: Arial, Helvetica, sans-serif;
-    margin-top: 30px;
-    margin-bottom: 40px;
+    margin: -10px 200px 40px;
 }
+.img1{
+    margin-top: 120px;
+    margin-left: 80px;
+}
+.img2{
+    margin-top: 106px;
+    margin-left: 80px;
+
+}
+.img3{
+    margin-top: 67px;
+    margin-left: 80px;
+
+}
+.bg2{
+    background-color: #c6f2f5;
+}
+.bg3{
+    background-color: rgb(192, 245, 223);
+}
+
 /* Hot deal section style */
 .red{
     color: rgb(209, 27, 87);
